# qlever-ui-new

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.default.yaml  docker-compose-decoder.yaml  docker-compose.yaml
backend/: README.md  config.yaml  pyproject.toml
backend/dumper/: main.py
backend/examples/dblp/: example-001.rq  example-002.rq  example-003.rq  example-004.rq  example-005.rq  example-006.rq  example-007.rq  example-008.rq  example-009.rq  example-010.rq  example-011.rq  example-012.rq  example-013.rq  example-014.rq  example-015.rq
backend/examples/deepocean/: names_and_types.rq
backend/examples/earthsurface/: type_auto.rq
backend/examples/facetsearch/: all_count_geocoordinate.rq  all_count_geoshape.rq
backend/examples/imdb/: example-001.rq  example-002.rq  example-003.rq
backend/examples/osm-planet/: example-001.rq  example-002.rq  example-003.rq  example-004.rq  example-005.rq  example-006.rq  example-007.rq  example-008.rq  example-009.rq  example-010.rq  example-011.rq  example-012.rq  example-013.rq  example-014.rq  example-015.rq  example-016.rq  example-017.rq  example-018.rq  example-019.rq  example-020.rq  example-021.rq  example-022.rq  example-023.rq  example-024.rq  example-025.rq  example-026.rq  example-027.rq  example-028.rq  example-029.rq  example-030.rq  example-031.rq  example-032.rq  example-033.rq  example-034.rq  example-035.rq  example-036.rq  example-037.rq  example-038.rq  example-039.rq  example-040.rq  (+8 more)
backend/examples/wikidata/: example-001.rq  example-002.rq  example-003.rq  example-004.rq  example-005.rq  (+63 more)
(+32 files in other folders)
