[project]
name = "qlever-ui-backend"
version = "0.6.0"
description = "Backend API for Qlever-UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]==0.135.3",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "watchdog==6.0.0",
    "requests==2.33.1",
    "ruamel-yaml==0.19.1",
]

[tool.setuptools.package-data]
api = ["banner.txt"]
